# copilot-desktop

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
e2e/: app.spec.ts
scripts/: check-build.sh  smoke-test.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: AuthStatus.ts  Conversation.ts  Message.ts  ModelInfo.ts  Settings.ts
src-tauri/src/: commands.rs  copilot.rs  db.rs  error.rs  lib.rs  state.rs
src-tauri/tests/: integration_tests.rs
src/lib/api/: tauri.test.ts  tauri.ts
src/lib/components/chat/: ChatPanel.svelte  MarkdownRenderer.svelte  MarkdownRenderer.test.ts  MessageBubble.svelte  MessageInput.svelte  MessageInput.test.ts  ModelSelector.svelte
src/lib/components/common/: SettingsModal.svelte  Toast.svelte
src/lib/components/layout/: AppLayout.svelte  ConversationContextMenu.svelte  Navbar.svelte  Sidebar.svelte
src/lib/services/: app.ts  chat.integration.test.ts  chat.test.ts  chat.ts  conversations.ts
src/lib/stores/: chat.lru.test.ts  chat.test.ts  chat.ts  models.test.ts  models.ts  settings.test.ts  settings.ts  sidebar.ts  theme.ts
src/lib/utils/: errors.ts  format.test.ts  format.ts  logger.ts  shortcuts.test.ts  shortcuts.ts  toast.test.ts  toast.ts
src/routes/: +layout.svelte  +page.svelte
src/tests/: tauri-mock-setup.ts
