[package]
name = "copilot-desktop"
version = "0.1.0"
description = "Copilot Desktop - A Tauri V2 + SvelteKit application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["test"] }
tauri-plugin-log = "2"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-util = "0.7"

# Database
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID for conversation IDs
uuid = { version = "1", features = ["v4"] }

# Pinned to specific revision for stability. Update deliberately after testing.
copilot-sdk = { git = "https://github.com/copilot-community-sdk/copilot-sdk-rust", rev = "109f234b7be6cf59768e3814a01412ade25fb62e" }

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# Executable finding
which = "7"

# TypeScript type generation from Rust structs
ts-rs = { version = "12", features = ["serde-compat"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
